--- a/bower.json
+++ b/bower.json
@@ -2,15 +2,15 @@
     "name": "adapt-iframe",
     "repository": {
         "type": "git",
-        "url": "git://github.com/cgkineo/adapt-iframe"
+        "url": "git://github.com/oscarsiles/adapt-iframe"
     },
     "framework": ">=2.0.16",
-    "version": "2.1.0",
-    "homepage": "https://github.com/cgkineo/adapt-iframe",
-    "issues": "https://github.com/cgkineo/adapt-iframe/issues/",
+    "version": "2.1.1",
+    "homepage": "https://github.com/oscarsiles/adapt-iframe",
+    "issues": "https://github.com/oscarsiles/adapt-iframe/issues/",
     "displayName": "iframe",
     "component": "iframe",
-    "description": "An adapt component that loads content into an iframe",
+    "description": "An adapt component that loads content into an iframe. Allows for fullscreen video.",
     "main": "/js/adapt-iframe.js",
     "keywords": [
         "adapt-plugin",
